# blux-doctrine

./: .ruff.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
blux_doctrine/: __init__.py  cli.py  config.py  engine.py  loader.py  schema.py  telemetry.py
blux_doctrine/adapters/: ca.py  guard.py  lite.py  quantum.py  reg.py
blux_doctrine/checks/: __init__.py  _base.py  fairness.py  privacy.py  provenance.py  safety.py  security.py
blux_doctrine/dsl/: parser.py  syntax.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  DSL.md  EVALUATION.md  INSTALL.md  INTEGRATIONS.md  OPERATIONS.md  POLICY_MODEL.md  PRIVACY.md  ROADMAP.md  SCHEMA.md  SECURITY.md  TROUBLESHOOTING.md  VISION.md  index.md
doctrine/core/: code-of-ethics.md  conscious-engineering.md  contributor-guidelines.md  index.md  integrity.md  light-over-denial.md  outer-void-ai-unity.md
doctrine/examples/: example_context.yaml  example_request.json
doctrine/pillars/: resilience.md  responsibility.md  stability.md  transparency.md
doctrine/rules/: base.yaml  privacy.yaml  redteam.yaml  security.yaml
scripts/: compile_dsl.py  evaluate_sample.py  gen_filetree.py  update_readme_filetree.py  validate_doctrine.py
tests/: test_adapters_guard.py  test_checks_security.py  test_engine.py  test_schema.py
tests/fixtures/contexts/: sample_context.json
tests/fixtures/policies/: sample_policy.yaml
